--- a/css/about.css
+++ b/css/about.css
@@ -1,398 +1,1 @@
-.version.about /* version checker */
-{
-	color: #0000E6;
-	background-color: #3DC605;
-}
-
-.html
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 1880px;
-	min-height: 956px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 62px 20px;
-}
-
-#menuu433
-{
-	z-index: 7;
-	width: 1880px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-}
-
-#u469
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u470
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u470:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u472-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u470:hover #u472-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u470:active #u472-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u441
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 376px;
-}
-
-#u458
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u458:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u459-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u470.MuseMenuActive #u472-4,#u458:hover #u459-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u458:active #u459-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u434
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 752px;
-}
-
-#u435
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u435:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u470:active,#u458:active,#u435:active
-{
-	background-color: #6B6B6B;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u437-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u458.MuseMenuActive #u459-4,#u435:hover #u437-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u435:active #u437-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u435.MuseMenuActive #u437-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u462
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1128px;
-}
-
-#u465
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u467-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-	left: 0px;
-}
-
-#u465:hover #u467-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u465:active #u467-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u985
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1505px;
-}
-
-#u986
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u465.MuseMenuActive,#u986:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u986:active
-{
-	background-color: #6B6B6B;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u989-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u465.MuseMenuActive #u467-4,#u986:hover #u989-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u986:active #u989-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u986.MuseMenuActive #u989-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u245-4
-{
-	z-index: 3;
-	width: 151px;
-	min-height: 50px;
-	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 808px;
-	position: relative;
-}
-
-#u243
-{
-	z-index: 2;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1730px;
-	margin-top: 15px;
-	position: relative;
-}
-
-body
-{
-	position: relative;
-	min-width: 1920px;
-	padding-top: 36px;
-	padding-bottom: 36px;
-}
-
-#page .verticalspacer
-{
-	clear: both;
-}
-
+.version.about{color:#0000F1;background-color:#84C9FA;}#page{padding-bottom:62px;background-image:none;background-color:transparent;margin-left:auto;border-color:#000000;margin-right:auto;width:100%;border-width:0px;min-height:438px;z-index:1;}#pmenuu613{margin-right:-10000px;width:0.01px;margin-top:20px;z-index:2;margin-left:20px;}#menuu613{position:relative;border-color:transparent;border-width:0px;background-color:transparent;z-index:2;}#u648-4{margin-right:-10000px;color:#FFFFFF;text-align:center;border-width:0px;min-height:17px;position:relative;border-color:transparent;left:0px;font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;top:17px;background-color:transparent;}#u635,#u628,#u621,#u642,#u614{margin-right:-10000px;background-color:transparent;min-height:52px;position:relative;}#u636,#u629,#u622,#u645,#u617{padding-bottom:35px;background-color:#C4C4C4;position:relative;}#u636:hover,#u629:hover,#u622:hover,#u645.MuseMenuActive,#u617:hover{min-height:0px;background-color:#999999;margin:0px;}#u636:active,#u629:active,#u622:active,#u617:active{min-height:0px;background-color:#6B6B6B;margin:0px;}#u638-4,#u631-4,#u625-4,#u620-4{font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;color:#FFFFFF;text-align:center;top:17px;background-color:transparent;position:relative;border-color:transparent;margin-right:-10000px;border-width:0px;min-height:17px;}#u636:hover #u638-4,#u636:active #u638-4,#u636.MuseMenuActive #u638-4,#u629:hover #u631-4,#u629:active #u631-4,#u629.MuseMenuActive #u631-4,#u622:hover #u625-4,#u622:active #u625-4,#u622.MuseMenuActive #u625-4,#u645:hover #u648-4,#u645:active #u648-4,#u645.MuseMenuActive #u648-4,#u617:hover #u620-4,#u617:active #u620-4,#u617.MuseMenuActive #u620-4{padding-bottom:0px;min-height:17px;padding-top:0px;margin:0px -10000px 0px 0px;}.MenuItem{cursor:pointer;}#u861-4{min-height:50px;width:151px;background-color:transparent;z-index:33;position:relative;}#u862{margin-right:-10000px;margin-top:418px;background-color:transparent;position:relative;border-color:transparent;width:150px;border-width:0px;min-height:30px;z-index:37;}.css_verticalspacer .verticalspacer{height:calc(100vh - 509px);}.html{background-color:#FFFFFF;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{max-width:1280px;}#menuu613{width:1240px;}#u635,#u636{width:246px;}#u636:hover{width:246px;}#u636:active,#u638-4{width:246px;}#u636:hover #u638-4{width:246px;}#u636:active #u638-4{width:246px;}#u628{width:246px;left:248px;}#u636.MuseMenuActive #u638-4,#u629{width:246px;}#u629:hover{width:246px;}#u629:active,#u631-4{width:246px;}#u629:hover #u631-4{width:246px;}#u629:active #u631-4{width:246px;}#u621{width:246px;left:496px;}#u629.MuseMenuActive #u631-4,#u622{width:246px;}#u622:hover{width:246px;}#u622:active,#u625-4{width:246px;}#u622:hover #u625-4{width:246px;}#u622:active #u625-4{width:246px;}#u622.MuseMenuActive #u625-4{width:246px;}#u642{width:247px;left:744px;}#u645{width:247px;}#u645.MuseMenuActive,#u648-4{width:247px;}#u645:hover #u648-4{width:247px;}#u645:active #u648-4{width:247px;}#u614{width:247px;left:993px;}#u645.MuseMenuActive #u648-4,#u617{width:247px;}#u617:hover{width:247px;}#u617:active,#u620-4{width:247px;}#u617:hover #u620-4{width:247px;}#u617:active #u620-4{width:247px;}#u617.MuseMenuActive #u620-4{width:247px;}#u861-4{margin-left:1045px;margin-top:281px;}#u862{left:85.24%;}}@media (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{max-width:960px;}#menuu613{width:920px;}#u635,#u636{width:182px;}#u636:hover{width:182px;}#u636:active,#u638-4{width:182px;}#u636:hover #u638-4{width:182px;}#u636:active #u638-4{width:182px;}#u628{width:182px;left:184px;}#u636.MuseMenuActive #u638-4,#u629{width:182px;}#u629:hover{width:182px;}#u629:active,#u631-4{width:182px;}#u629:hover #u631-4{width:182px;}#u629:active #u631-4{width:182px;}#u621{width:182px;left:368px;}#u629.MuseMenuActive #u631-4,#u622{width:182px;}#u622:hover{width:182px;}#u622:active,#u625-4{width:182px;}#u622:hover #u625-4{width:182px;}#u622:active #u625-4{width:182px;}#u622.MuseMenuActive #u625-4{width:182px;}#u642{width:183px;left:552px;}#u645{width:183px;}#u645.MuseMenuActive,#u648-4{width:183px;}#u645:hover #u648-4{width:183px;}#u645:active #u648-4{width:183px;}#u614{width:183px;left:737px;}#u645.MuseMenuActive #u648-4,#u617{width:183px;}#u617:hover{width:183px;}#u617:active,#u620-4{width:183px;}#u617:hover #u620-4{width:183px;}#u617:active #u620-4{width:183px;}#u617.MuseMenuActive #u620-4{width:183px;}#u861-4{margin-left:768px;margin-top:282px;}#u862{left:85.21%;}body{overflow-x:hidden;min-width:320px;}}
