--- a/css/tools.css
+++ b/css/tools.css
@@ -1,424 +1,1 @@
-.version.tools /* version checker */
-{
-	color: #0000F4;
-	background-color: #2C3405;
-}
-
-.html
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 1880px;
-	min-height: 956px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 62px 20px;
-}
-
-#menuu390
-{
-	z-index: 7;
-	width: 1880px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-}
-
-#u426
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u427
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u427:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u429-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u427:hover #u429-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u427:active #u429-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u398
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 376px;
-}
-
-#u415
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u415:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u427:active,#u415:active
-{
-	background-color: #6B6B6B;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u416-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u427.MuseMenuActive #u429-4,#u415:hover #u416-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u415:active #u416-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u391
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 752px;
-}
-
-#u392
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u392.MuseMenuActive
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u394-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-	left: 0px;
-}
-
-#u415.MuseMenuActive #u416-4,#u392:hover #u394-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u392:active #u394-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u392.MuseMenuActive #u394-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u419
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1128px;
-}
-
-#u422
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u422:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u424-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u422:hover #u424-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u422:active #u424-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u978
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1505px;
-}
-
-#u979
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u979:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u422:active,#u979:active
-{
-	background-color: #6B6B6B;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u981-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u422.MuseMenuActive #u424-4,#u979:hover #u981-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u979:active #u981-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u979.MuseMenuActive #u981-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u957-4
-{
-	z-index: 38;
-	width: 1250px;
-	min-height: 36px;
-	background-color: transparent;
-	font-size: 31px;
-	line-height: 37px;
-	margin-left: 315px;
-	margin-top: 75px;
-	position: relative;
-}
-
-#u957
-{
-	font-size: 31px;
-}
-
-#u242-4
-{
-	z-index: 3;
-	width: 151px;
-	min-height: 50px;
-	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 738px;
-	position: relative;
-}
-
-#u240
-{
-	z-index: 2;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1730px;
-	margin-top: 15px;
-	position: relative;
-}
-
-body
-{
-	position: relative;
-	min-width: 1920px;
-	padding-top: 36px;
-	padding-bottom: 36px;
-}
-
-#page .verticalspacer
-{
-	clear: both;
-}
-
+.version.tools{color:#0000FC;background-color:#F90BD8;}#page{padding-bottom:62px;background-image:none;background-color:transparent;margin-left:auto;border-color:#000000;margin-right:auto;width:100%;border-width:0px;min-height:438px;z-index:1;}#pmenuu505{padding-bottom:0px;margin-left:20px;margin-right:-10000px;width:0.01px;margin-top:20px;z-index:2;}#menuu505{position:relative;border-color:transparent;border-width:0px;background-color:transparent;z-index:2;}#u517-4{margin-right:-10000px;color:#FFFFFF;text-align:center;border-width:0px;min-height:17px;position:relative;border-color:transparent;left:0px;font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;top:17px;background-color:transparent;}#u527,#u520,#u513,#u534,#u506{margin-right:-10000px;background-color:transparent;min-height:52px;position:relative;}#u528,#u521,#u514,#u537,#u509{padding-bottom:35px;background-color:#C4C4C4;position:relative;}#u528:hover,#u521:hover,#u514.MuseMenuActive,#u537:hover,#u509:hover{min-height:0px;background-color:#999999;margin:0px;}#u528:active,#u521:active,#u537:active,#u509:active{min-height:0px;background-color:#6B6B6B;margin:0px;}#u530-4,#u523-4,#u540-4,#u512-4{font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;color:#FFFFFF;text-align:center;top:17px;background-color:transparent;position:relative;border-color:transparent;margin-right:-10000px;border-width:0px;min-height:17px;}#u528:hover #u530-4,#u528:active #u530-4,#u528.MuseMenuActive #u530-4,#u521:hover #u523-4,#u521:active #u523-4,#u521.MuseMenuActive #u523-4,#u514:hover #u517-4,#u514:active #u517-4,#u514.MuseMenuActive #u517-4,#u537:hover #u540-4,#u537:active #u540-4,#u537.MuseMenuActive #u540-4,#u509:hover #u512-4,#u509:active #u512-4,#u509.MuseMenuActive #u512-4{padding-bottom:0px;min-height:17px;padding-top:0px;margin:0px -10000px 0px 0px;}.MenuItem{cursor:pointer;}#u924-4{line-height:30px;min-height:36px;font-size:25px;width:920px;background-color:transparent;z-index:38;position:relative;}#u845-4{min-height:50px;width:151px;background-color:transparent;z-index:33;position:relative;}#u846{margin-right:-10000px;left:85.32%;margin-top:408px;background-color:transparent;position:relative;border-color:transparent;width:150px;border-width:0px;min-height:30px;z-index:37;}.css_verticalspacer .verticalspacer{height:calc(100vh - 500px);}.html{background-color:#FFFFFF;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{max-width:1280px;}#menuu505{width:1240px;}#u527,#u528{width:246px;}#u528:hover{width:246px;}#u528:active,#u530-4{width:246px;}#u528:hover #u530-4{width:246px;}#u528:active #u530-4{width:246px;}#u520{width:246px;left:248px;}#u528.MuseMenuActive #u530-4,#u521{width:246px;}#u521:hover{width:246px;}#u521:active,#u523-4{width:246px;}#u521:hover #u523-4{width:246px;}#u521:active #u523-4{width:246px;}#u513{width:246px;left:496px;}#u521.MuseMenuActive #u523-4,#u514{width:246px;}#u514.MuseMenuActive,#u517-4{width:246px;}#u514:hover #u517-4{width:246px;}#u514:active #u517-4{width:246px;}#u514.MuseMenuActive #u517-4{width:246px;}#u534{width:247px;left:744px;}#u537{width:247px;}#u537:hover{width:247px;}#u537:active,#u540-4{width:247px;}#u537:hover #u540-4{width:247px;}#u537:active #u540-4{width:247px;}#u506{width:247px;left:993px;}#u537.MuseMenuActive #u540-4,#u509{width:247px;}#u509:hover{width:247px;}#u509:active,#u512-4{width:247px;}#u509:hover #u512-4{width:247px;}#u509:active #u512-4{width:247px;}#u509.MuseMenuActive #u512-4{width:247px;}#u924-4{margin-left:160px;margin-top:22px;}#u845-4{margin-left:1043px;margin-top:189px;}}@media (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{max-width:960px;}#menuu505{width:920px;}#u527,#u528{width:182px;}#u528:hover{width:182px;}#u528:active,#u530-4{width:182px;}#u528:hover #u530-4{width:182px;}#u528:active #u530-4{width:182px;}#u520{width:182px;left:184px;}#u528.MuseMenuActive #u530-4,#u521{width:182px;}#u521:hover{width:182px;}#u521:active,#u523-4{width:182px;}#u521:hover #u523-4{width:182px;}#u521:active #u523-4{width:182px;}#u513{width:182px;left:368px;}#u521.MuseMenuActive #u523-4,#u514{width:182px;}#u514.MuseMenuActive,#u517-4{width:182px;}#u514:hover #u517-4{width:182px;}#u514:active #u517-4{width:182px;}#u514.MuseMenuActive #u517-4{width:182px;}#u534{width:183px;left:552px;}#u537{width:183px;}#u537:hover{width:183px;}#u537:active,#u540-4{width:183px;}#u537:hover #u540-4{width:183px;}#u537:active #u540-4{width:183px;}#u506{width:183px;left:737px;}#u537.MuseMenuActive #u540-4,#u509{width:183px;}#u509:hover{width:183px;}#u509:active,#u512-4{width:183px;}#u509:hover #u512-4{width:183px;}#u509:active #u512-4{width:183px;}#u509.MuseMenuActive #u512-4{width:183px;}#u924-4{margin-top:16px;}#u845-4{margin-left:769px;margin-top:195px;}body{overflow-x:hidden;min-width:320px;}}
