--- a/css/images.css
+++ b/css/images.css
@@ -1,398 +1,1 @@
-.version.images /* version checker */
-{
-	color: #00000C;
-	background-color: #4FD28E;
-}
-
-.html
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 1880px;
-	min-height: 956px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 62px 20px;
-}
-
-#menuu347
-{
-	z-index: 7;
-	width: 1880px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-}
-
-#u383
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u384
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u384:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u386-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u384:hover #u386-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u384:active #u386-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u355
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 376px;
-}
-
-#u372
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u373-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-	left: 0px;
-}
-
-#u384.MuseMenuActive #u386-4,#u372:hover #u373-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u372:active #u373-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u348
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 752px;
-}
-
-#u349
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u372.MuseMenuActive,#u349:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u384:active,#u349:active
-{
-	background-color: #6B6B6B;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u351-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u372.MuseMenuActive #u373-4,#u349:hover #u351-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u349:active #u351-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u349.MuseMenuActive #u351-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u376
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1128px;
-}
-
-#u379
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u379:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u381-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u379:hover #u381-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u379:active #u381-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u964
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1505px;
-}
-
-#u965
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u965:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u379:active,#u965:active
-{
-	background-color: #6B6B6B;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u967-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u379.MuseMenuActive #u381-4,#u965:hover #u967-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u965:active #u967-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u965.MuseMenuActive #u967-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u235-4
-{
-	z-index: 3;
-	width: 151px;
-	min-height: 50px;
-	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 808px;
-	position: relative;
-}
-
-#u227
-{
-	z-index: 2;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1730px;
-	margin-top: 15px;
-	position: relative;
-}
-
-body
-{
-	position: relative;
-	min-width: 1920px;
-	padding-top: 36px;
-	padding-bottom: 36px;
-}
-
-#page .verticalspacer
-{
-	clear: both;
-}
-
+.version.images{color:#000017;background-color:#095971;}#page{padding-bottom:62px;background-image:none;background-color:transparent;margin-left:auto;border-color:#000000;margin-right:auto;width:100%;border-width:0px;min-height:438px;z-index:1;}#pmenuu397{margin-right:-10000px;width:0.01px;margin-top:20px;z-index:2;margin-left:20px;}#menuu397{position:relative;border-color:transparent;border-width:0px;background-color:transparent;z-index:2;}#u415-4{margin-right:-10000px;color:#FFFFFF;text-align:center;border-width:0px;min-height:17px;position:relative;border-color:transparent;left:0px;font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;top:17px;background-color:transparent;}#u419,#u412,#u405,#u426,#u398{margin-right:-10000px;background-color:transparent;min-height:52px;position:relative;}#u420,#u413,#u406,#u429,#u401{padding-bottom:35px;background-color:#C4C4C4;position:relative;}#u420:hover,#u413.MuseMenuActive,#u406:hover,#u429:hover,#u401:hover{min-height:0px;background-color:#999999;margin:0px;}#u420:active,#u406:active,#u429:active,#u401:active{min-height:0px;background-color:#6B6B6B;margin:0px;}#u422-4,#u409-4,#u432-4,#u404-4{font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;color:#FFFFFF;text-align:center;top:17px;background-color:transparent;position:relative;border-color:transparent;margin-right:-10000px;border-width:0px;min-height:17px;}#u420:hover #u422-4,#u420:active #u422-4,#u420.MuseMenuActive #u422-4,#u413:hover #u415-4,#u413:active #u415-4,#u413.MuseMenuActive #u415-4,#u406:hover #u409-4,#u406:active #u409-4,#u406.MuseMenuActive #u409-4,#u429:hover #u432-4,#u429:active #u432-4,#u429.MuseMenuActive #u432-4,#u401:hover #u404-4,#u401:active #u404-4,#u401.MuseMenuActive #u404-4{padding-bottom:0px;min-height:17px;padding-top:0px;margin:0px -10000px 0px 0px;}.MenuItem{cursor:pointer;}#u942-4{min-height:50px;width:151px;margin-top:289px;background-color:transparent;z-index:33;position:relative;}#u943{margin-right:-10000px;left:85.32%;margin-top:425px;background-color:transparent;position:relative;border-color:transparent;width:150px;border-width:0px;min-height:30px;z-index:37;}.css_verticalspacer .verticalspacer{height:calc(100vh - 516px);}.html{background-color:#FFFFFF;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{max-width:1280px;}#menuu397{width:1240px;}#u419,#u420{width:246px;}#u420:hover{width:246px;}#u420:active,#u422-4{width:246px;}#u420:hover #u422-4{width:246px;}#u420:active #u422-4{width:246px;}#u412{width:246px;left:248px;}#u420.MuseMenuActive #u422-4,#u413{width:246px;}#u413.MuseMenuActive,#u415-4{width:246px;}#u413:hover #u415-4{width:246px;}#u413:active #u415-4{width:246px;}#u405{width:246px;left:496px;}#u413.MuseMenuActive #u415-4,#u406{width:246px;}#u406:hover{width:246px;}#u406:active,#u409-4{width:246px;}#u406:hover #u409-4{width:246px;}#u406:active #u409-4{width:246px;}#u406.MuseMenuActive #u409-4{width:246px;}#u426{width:247px;left:744px;}#u429{width:247px;}#u429:hover{width:247px;}#u429:active,#u432-4{width:247px;}#u429:hover #u432-4{width:247px;}#u429:active #u432-4{width:247px;}#u398{width:247px;left:993px;}#u429.MuseMenuActive #u432-4,#u401{width:247px;}#u401:hover{width:247px;}#u401:active,#u404-4{width:247px;}#u401:hover #u404-4{width:247px;}#u401:active #u404-4{width:247px;}#u401.MuseMenuActive #u404-4{width:247px;}#u942-4{margin-left:1048px;}}@media (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{max-width:960px;}#menuu397{width:920px;}#u419,#u420{width:182px;}#u420:hover{width:182px;}#u420:active,#u422-4{width:182px;}#u420:hover #u422-4{width:182px;}#u420:active #u422-4{width:182px;}#u412{width:182px;left:184px;}#u420.MuseMenuActive #u422-4,#u413{width:182px;}#u413.MuseMenuActive,#u415-4{width:182px;}#u413:hover #u415-4{width:182px;}#u413:active #u415-4{width:182px;}#u405{width:182px;left:368px;}#u413.MuseMenuActive #u415-4,#u406{width:182px;}#u406:hover{width:182px;}#u406:active,#u409-4{width:182px;}#u406:hover #u409-4{width:182px;}#u406:active #u409-4{width:182px;}#u406.MuseMenuActive #u409-4{width:182px;}#u426{width:183px;left:552px;}#u429{width:183px;}#u429:hover{width:183px;}#u429:active,#u432-4{width:183px;}#u429:hover #u432-4{width:183px;}#u429:active #u432-4{width:183px;}#u398{width:183px;left:737px;}#u429.MuseMenuActive #u432-4,#u401{width:183px;}#u401:hover{width:183px;}#u401:active,#u404-4{width:183px;}#u401:hover #u404-4{width:183px;}#u401:active #u404-4{width:183px;}#u401.MuseMenuActive #u404-4{width:183px;}#u942-4{margin-left:769px;}body{overflow-x:hidden;min-width:320px;}}
