--- a/css/index.css
+++ b/css/index.css
@@ -1,454 +1,1 @@
-.version.index /* version checker */
-{
-	color: #0000EE;
-	background-color: #930828;
-}
-
-.html
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 1880px;
-	min-height: 956px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 62px 20px;
-}
-
-#menuu911
-{
-	z-index: 25;
-	width: 1880px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-}
-
-#u947
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u950
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u953-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-	left: 0px;
-}
-
-#u950:hover #u953-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u950:active #u953-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u919
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 376px;
-}
-
-#u920
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u950.MuseMenuActive,#u920:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u923-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u950.MuseMenuActive #u953-4,#u920:hover #u923-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u920:active #u923-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u940
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 752px;
-}
-
-#u943
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u943:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u920:active,#u943:active
-{
-	background-color: #6B6B6B;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u945-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u920.MuseMenuActive #u923-4,#u943:hover #u945-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u943:active #u945-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u943.MuseMenuActive #u945-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u912
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1128px;
-}
-
-#u913
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u913:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u915-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u913:hover #u915-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u913:active #u915-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u999
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1505px;
-}
-
-#u1002
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1002:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u913:active,#u1002:active
-{
-	background-color: #6B6B6B;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1003-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u913.MuseMenuActive #u915-4,#u1002:hover #u1003-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1002:active #u1003-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1002.MuseMenuActive #u1003-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u907-4
-{
-	z-index: 7;
-	width: 1617px;
-	min-height: 66px;
-	background-color: transparent;
-	font-size: 95px;
-	line-height: 114px;
-	margin-left: 132px;
-	margin-top: 95px;
-	position: relative;
-}
-
-#u908-4
-{
-	z-index: 11;
-	width: 232px;
-	min-height: 30px;
-	background-color: transparent;
-	font-size: 28px;
-	line-height: 34px;
-	margin-left: 1517px;
-	margin-top: 1px;
-	position: relative;
-}
-
-#u909-4
-{
-	z-index: 15;
-	width: 1738px;
-	min-height: 22px;
-	background-color: transparent;
-	font-size: 31px;
-	line-height: 37px;
-	margin-left: 71px;
-	margin-top: 62px;
-	position: relative;
-}
-
-#u910-6
-{
-	z-index: 19;
-	width: 1738px;
-	min-height: 106px;
-	background-color: transparent;
-	font-size: 31px;
-	line-height: 37px;
-	margin-left: 71px;
-	margin-top: 41px;
-	position: relative;
-}
-
-#u910,#u910-3
-{
-	font-size: 31px;
-}
-
-#u239-4
-{
-	z-index: 3;
-	width: 151px;
-	min-height: 50px;
-	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 367px;
-	position: relative;
-}
-
-#u237
-{
-	z-index: 2;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1730px;
-	margin-top: 15px;
-	position: relative;
-}
-
-body
-{
-	position: relative;
-	min-width: 1920px;
-	padding-bottom: 36px;
-}
-
-#page .verticalspacer
-{
-	clear: both;
-}
-
+.version.index{color:#000015;background-color:#9A79E4;}#page{padding-bottom:62px;background-image:none;background-color:transparent;margin-left:auto;border-color:#000000;margin-right:auto;width:100%;border-width:0px;min-height:419px;z-index:1;}#pmenuu289{padding-bottom:0px;margin-left:20px;margin-right:-10000px;width:0.01px;margin-top:20px;z-index:2;}#menuu289{position:relative;border-color:transparent;border-width:0px;background-color:transparent;z-index:2;}#u324-4{margin-right:-10000px;color:#FFFFFF;text-align:center;border-width:0px;min-height:17px;position:relative;border-color:transparent;left:0px;font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;top:17px;background-color:transparent;}#u318,#u311,#u297,#u290,#u304{margin-right:-10000px;background-color:transparent;min-height:52px;position:relative;}#u321,#u312,#u298,#u291,#u307{padding-bottom:35px;background-color:#C4C4C4;position:relative;}#u321.MuseMenuActive,#u312:hover,#u298:hover,#u291:hover,#u307:hover{min-height:0px;background-color:#999999;margin:0px;}#u312:active,#u298:active,#u291:active,#u307:active{min-height:0px;background-color:#6B6B6B;margin:0px;}#u313-4,#u299-4,#u293-4,#u309-4{font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;color:#FFFFFF;text-align:center;top:17px;background-color:transparent;position:relative;border-color:transparent;margin-right:-10000px;border-width:0px;min-height:17px;}#u321:hover #u324-4,#u321:active #u324-4,#u321.MuseMenuActive #u324-4,#u312:hover #u313-4,#u312:active #u313-4,#u312.MuseMenuActive #u313-4,#u298:hover #u299-4,#u298:active #u299-4,#u298.MuseMenuActive #u299-4,#u291:hover #u293-4,#u291:active #u293-4,#u291.MuseMenuActive #u293-4,#u307:hover #u309-4,#u307:active #u309-4,#u307.MuseMenuActive #u309-4{padding-bottom:0px;min-height:17px;padding-top:0px;margin:0px -10000px 0px 0px;}.MenuItem{cursor:pointer;}#u930-4{line-height:61px;min-height:66px;font-size:51px;margin-top:30px;background-color:transparent;z-index:38;position:relative;}#u931-4{line-height:20px;min-height:30px;font-size:17px;background-color:transparent;z-index:42;position:relative;}#u932-4{line-height:30px;min-height:22px;font-size:25px;width:919px;margin-top:36px;background-color:transparent;z-index:46;position:relative;}#u933-6{line-height:30px;min-height:106px;font-size:25px;width:919px;margin-top:36px;background-color:transparent;z-index:50;position:relative;}#u829-4{min-height:50px;width:151px;background-color:transparent;z-index:33;position:relative;}#u832{margin-right:-10000px;background-color:transparent;position:relative;border-color:transparent;width:150px;border-width:0px;min-height:30px;z-index:37;}.html{background-color:#FFFFFF;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#menuu289{width:1240px;}#u318,#u321{width:246px;}#u321.MuseMenuActive,#u324-4{width:246px;}#u321:hover #u324-4{width:246px;}#u321:active #u324-4{width:246px;}#u311{width:246px;left:248px;}#u321.MuseMenuActive #u324-4,#u312{width:246px;}#u312:hover{width:246px;}#u312:active,#u313-4{width:246px;}#u312:hover #u313-4{width:246px;}#u312:active #u313-4{width:246px;}#u297{width:246px;left:496px;}#u312.MuseMenuActive #u313-4,#u298{width:246px;}#u298:hover{width:246px;}#u298:active,#u299-4{width:246px;}#u298:hover #u299-4{width:246px;}#u298:active #u299-4{width:246px;}#u298.MuseMenuActive #u299-4{width:246px;}#u290{width:247px;left:744px;}#u291{width:247px;}#u291:hover{width:247px;}#u291:active,#u293-4{width:247px;}#u291:hover #u293-4{width:247px;}#u291:active #u293-4{width:247px;}#u304{width:247px;left:993px;}#u291.MuseMenuActive #u293-4,#u307{width:247px;}#u307:hover{width:247px;}#u307:active,#u309-4{width:247px;}#u307:hover #u309-4{width:247px;}#u307:active #u309-4{width:247px;}#u307.MuseMenuActive #u309-4{width:247px;}#u930-4{width:851px;margin-left:202px;}#u931-4{width:140px;margin-left:948px;}#u932-4,#u933-6{margin-left:160px;}#u829-4{margin-left:1043px;margin-top:35px;}#u832{margin-top:551px;left:85.55%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 641px);}}@media (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{max-width:960px;}#menuu289{width:920px;}#u318,#u321{width:182px;}#u321.MuseMenuActive,#u324-4{width:182px;}#u321:hover #u324-4{width:182px;}#u321:active #u324-4{width:182px;}#u311{width:182px;left:184px;}#u321.MuseMenuActive #u324-4,#u312{width:182px;}#u312:hover{width:182px;}#u312:active,#u313-4{width:182px;}#u312:hover #u313-4{width:182px;}#u312:active #u313-4{width:182px;}#u297{width:182px;left:368px;}#u312.MuseMenuActive #u313-4,#u298{width:182px;}#u298:hover{width:182px;}#u298:active,#u299-4{width:182px;}#u298:hover #u299-4{width:182px;}#u298:active #u299-4{width:182px;}#u298.MuseMenuActive #u299-4{width:182px;}#u290{width:183px;left:552px;}#u291{width:183px;}#u291:hover{width:183px;}#u291:active,#u293-4{width:183px;}#u291:hover #u293-4{width:183px;}#u291:active #u293-4{width:183px;}#u304{width:183px;left:737px;}#u291.MuseMenuActive #u293-4,#u307{width:183px;}#u307:hover{width:183px;}#u307:active,#u309-4{width:183px;}#u307:hover #u309-4{width:183px;}#u307:active #u309-4{width:183px;}#u307.MuseMenuActive #u309-4{width:183px;}#u930-4{width:841px;margin-left:39px;}#u931-4{width:127px;margin-left:768px;}#u829-4{margin-left:768px;margin-top:45px;}#u832{margin-top:617px;left:84.8%;}.css_verticalspacer .verticalspacer{height:calc(100vh - 707px);}body{overflow-x:hidden;min-width:320px;}}
