--- a/css/tutorials.css
+++ b/css/tutorials.css
@@ -1,424 +1,1 @@
-.version.tutorials /* version checker */
-{
-	color: #00001D;
-	background-color: #2ABFB5;
-}
-
-.html
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 1880px;
-	min-height: 956px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 62px 20px;
-}
-
-#menuu1006
-{
-	z-index: 2;
-	width: 1880px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-}
-
-#u1049
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u1052
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1052:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1053-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u1052:hover #u1053-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1052:active #u1053-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1021
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 376px;
-}
-
-#u1022
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1022:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1024-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u1052.MuseMenuActive #u1053-4,#u1022:hover #u1024-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1022:active #u1024-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1042
-{
-	width: 374px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 752px;
-}
-
-#u1043
-{
-	width: 374px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1043:hover
-{
-	background-color: #999999;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1052:active,#u1022:active,#u1043:active
-{
-	background-color: #6B6B6B;
-	width: 374px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1044-4
-{
-	width: 374px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u1022.MuseMenuActive #u1024-4,#u1043:hover #u1044-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1043:active #u1044-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1043.MuseMenuActive #u1044-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 374px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1014
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1128px;
-}
-
-#u1017
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1017:hover
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1017:active
-{
-	background-color: #6B6B6B;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1020-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-}
-
-#u1017:hover #u1020-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1017:active #u1020-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1007
-{
-	width: 375px;
-	min-height: 52px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 1505px;
-}
-
-#u1010
-{
-	width: 375px;
-	background-color: #C4C4C4;
-	padding-bottom: 35px;
-	position: relative;
-}
-
-#u1010.MuseMenuActive
-{
-	background-color: #999999;
-	width: 375px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u1013-4
-{
-	width: 375px;
-	min-height: 17px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	color: #FFFFFF;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
-	position: relative;
-	margin-right: -10000px;
-	top: 17px;
-	left: 0px;
-}
-
-#u1017.MuseMenuActive #u1020-4,#u1010:hover #u1013-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1010:active #u1013-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u1010.MuseMenuActive #u1013-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 375px;
-	margin: 0px -10000px 0px 0px;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u1111-4
-{
-	z-index: 38;
-	width: 624px;
-	min-height: 2px;
-	background-color: transparent;
-	font-size: 31px;
-	line-height: 37px;
-	margin-left: 628px;
-	margin-top: 67px;
-	position: relative;
-}
-
-#u1111
-{
-	font-size: 31px;
-}
-
-#u1061-4
-{
-	z-index: 34;
-	width: 151px;
-	min-height: 50px;
-	background-color: transparent;
-	margin-left: 1699px;
-	margin-top: 704px;
-	position: relative;
-}
-
-#u1059
-{
-	z-index: 33;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	margin-left: 1730px;
-	margin-top: 15px;
-	position: relative;
-}
-
-body
-{
-	position: relative;
-	min-width: 1920px;
-	padding-top: 36px;
-	padding-bottom: 36px;
-}
-
-#page .verticalspacer
-{
-	clear: both;
-}
-
+.version.tutorials{color:#00001D;background-color:#B616F4;}#page{padding-bottom:62px;background-image:none;background-color:transparent;margin-left:auto;border-color:#000000;margin-right:auto;width:100%;border-width:0px;min-height:438px;z-index:1;}#pmenuu721{margin-right:-10000px;width:0.01px;margin-top:20px;z-index:2;margin-left:20px;}#menuu721{position:relative;border-color:transparent;border-width:0px;background-color:transparent;z-index:2;}#u744:active,#u737:active,#u730:active,#u753:active{min-height:0px;background-color:#6B6B6B;margin:0px;}#u746-4,#u739-4,#u733-4,#u756-4{font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;color:#FFFFFF;text-align:center;top:17px;background-color:transparent;position:relative;border-color:transparent;margin-right:-10000px;border-width:0px;min-height:17px;}#u743,#u736,#u729,#u750,#u722{margin-right:-10000px;background-color:transparent;min-height:52px;position:relative;}#u744,#u737,#u730,#u753,#u725{padding-bottom:35px;background-color:#C4C4C4;position:relative;}#u744:hover,#u737:hover,#u730:hover,#u753:hover,#u725.MuseMenuActive{min-height:0px;background-color:#999999;margin:0px;}#u728-4{margin-right:-10000px;color:#FFFFFF;text-align:center;border-width:0px;min-height:17px;position:relative;border-color:transparent;left:0px;font-family:Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;top:17px;background-color:transparent;}#u744:hover #u746-4,#u744:active #u746-4,#u744.MuseMenuActive #u746-4,#u737:hover #u739-4,#u737:active #u739-4,#u737.MuseMenuActive #u739-4,#u730:hover #u733-4,#u730:active #u733-4,#u730.MuseMenuActive #u733-4,#u753:hover #u756-4,#u753:active #u756-4,#u753.MuseMenuActive #u756-4,#u725:hover #u728-4,#u725:active #u728-4,#u725.MuseMenuActive #u728-4{padding-bottom:0px;min-height:17px;padding-top:0px;margin:0px -10000px 0px 0px;}.MenuItem{cursor:pointer;}#u927-4{line-height:30px;min-height:2px;font-size:25px;width:507px;background-color:transparent;z-index:38;position:relative;}#u869-4{min-height:50px;width:151px;background-color:transparent;z-index:33;position:relative;}#u870{margin-right:-10000px;left:85.32%;margin-top:421px;background-color:transparent;position:relative;border-color:transparent;width:150px;border-width:0px;min-height:30px;z-index:37;}.css_verticalspacer .verticalspacer{height:calc(100vh - 512px);}.html{background-color:#FFFFFF;}body{position:relative;}@media (min-width: 961px), print{#muse_css_mq{background-color:#FFFFFF;}#bp_infinity.active{display:block;}#page{max-width:1280px;}#menuu721{width:1240px;}#u743,#u744{width:246px;}#u744:hover{width:246px;}#u744:active,#u746-4{width:246px;}#u744:hover #u746-4{width:246px;}#u744:active #u746-4{width:246px;}#u736{width:246px;left:248px;}#u744.MuseMenuActive #u746-4,#u737{width:246px;}#u737:hover{width:246px;}#u737:active,#u739-4{width:246px;}#u737:hover #u739-4{width:246px;}#u737:active #u739-4{width:246px;}#u729{width:246px;left:496px;}#u737.MuseMenuActive #u739-4,#u730{width:246px;}#u730:hover{width:246px;}#u730:active,#u733-4{width:246px;}#u730:hover #u733-4{width:246px;}#u730:active #u733-4{width:246px;}#u730.MuseMenuActive #u733-4{width:246px;}#u750{width:247px;left:744px;}#u753{width:247px;}#u753:hover{width:247px;}#u753:active,#u756-4{width:247px;}#u753:hover #u756-4{width:247px;}#u753:active #u756-4{width:247px;}#u722{width:247px;left:993px;}#u753.MuseMenuActive #u756-4,#u725{width:247px;}#u725.MuseMenuActive,#u728-4{width:247px;}#u725:hover #u728-4{width:247px;}#u725:active #u728-4{width:247px;}#u725.MuseMenuActive #u728-4{width:247px;}#u927-4{margin-left:367px;margin-top:26px;}#u869-4{margin-left:1047px;margin-top:229px;}}@media (max-width: 960px){#muse_css_mq{background-color:#0003c0;}#bp_960.active{display:block;}#page{max-width:960px;}#menuu721{width:920px;}#u743,#u744{width:182px;}#u744:hover{width:182px;}#u744:active,#u746-4{width:182px;}#u744:hover #u746-4{width:182px;}#u744:active #u746-4{width:182px;}#u736{width:182px;left:184px;}#u744.MuseMenuActive #u746-4,#u737{width:182px;}#u737:hover{width:182px;}#u737:active,#u739-4{width:182px;}#u737:hover #u739-4{width:182px;}#u737:active #u739-4{width:182px;}#u729{width:182px;left:368px;}#u737.MuseMenuActive #u739-4,#u730{width:182px;}#u730:hover{width:182px;}#u730:active,#u733-4{width:182px;}#u730:hover #u733-4{width:182px;}#u730:active #u733-4{width:182px;}#u730.MuseMenuActive #u733-4{width:182px;}#u750{width:183px;left:552px;}#u753{width:183px;}#u753:hover{width:183px;}#u753:active,#u756-4{width:183px;}#u753:hover #u756-4{width:183px;}#u753:active #u756-4{width:183px;}#u722{width:183px;left:737px;}#u753.MuseMenuActive #u756-4,#u725{width:183px;}#u725.MuseMenuActive,#u728-4{width:183px;}#u725:hover #u728-4{width:183px;}#u725:active #u728-4{width:183px;}#u725.MuseMenuActive #u728-4{width:183px;}#u927-4{margin-left:207px;margin-top:31px;}#u869-4{margin-left:769px;margin-top:224px;}body{overflow-x:hidden;min-width:320px;}}
